--- a/index.html
+++ b/index.html
@@ -67,6 +67,37 @@
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
+        <div class="modal">
+            <div class="modal__half modal__about">
+                <h3 class="modal__title modal__title--about">Here's a bit about me</h3>
+                <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+                <p class="modal__para">
+                    I'm a Florida-based <b class="blue">Frontend Software Engineer</b> who loves turning ideas into <b class="blue">intuitive, engaging web experiences</b> that feel effortless to use.
+                    <br>
+                    I'm a Junior Engineer with a strong foundation in front-end development and a <b class="blue">drive to keep learning and improving</b> every day.
+                    I love building clean, efficient code and turning ideas into real, user-friendly applications.
+                </p>
+                <div class="modal__languages">
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://icons.iconarchive.com/icons/cornmanthe3rd/plex/512/Other-html-5-icon.png" alt="">
+                        <span class="language__name">HTML</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://img.icons8.com/?size=512&id=21278&format=png" alt="">
+                        <span class="language__name">CSS</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://static.vecteezy.com/system/resources/previews/027/127/463/non_2x/javascript-logo-javascript-icon-transparent-free-png.png" alt="">
+                        <span class="language__name">JavaScript</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/1150px-React-icon.svg.png" alt="">
+                        <span class="language__name">React</span>
+                    </figure>
+                </div>
+            </div>
+            <div class="modal__half modal__contact">Let's have a chat</div>
+        </div>
     </section>
     <section id="projects">
         <div class="container">
@@ -102,8 +133,93 @@
                         </div>
                     </li>
                 </ul>
+
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Car Sales Projects
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, React
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil cum ipsam iste rerum, 
+                                    fugit excepturi ratione perferendis eum repellat sunt.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-brands fa-github-alt"></i>
+
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Car Sales Projects
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    Html, CSS, JavaScript, React
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil cum ipsam iste rerum, 
+                                    fugit excepturi ratione perferendis eum repellat sunt.
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-brands fa-linkedin-in"></i>
+                                    </a>
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-brands fa-github-alt"></i>
+
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container footer__container">
+            <div class="row footer__row">
+
+
+                <figure>
+                    <img class="footer__logo--img" src="./assets/logo.svg" alt="">
+                </figure>
+                <div class="footer__social--list">
+                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        GitHub
+                    </a>
+                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        LinkedIn
+                    </a>
+                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        Contact
+                    </a>
+                    <a href="#" class="footer__social--link link__hover-effect link__hover-effect--white">
+                        Resume
+                    </a>
+                </div>
+                <div class="footer__copyright">Copyright © 2025 Samuel Hurtado</div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
