--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Samuel Hurtado</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-    <script src="app.js"></script>
     <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init({
-        publicKey: "UPnKTCZcG4nJ5s_pU",
-      });
-   })();
-</script>
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init({
+                publicKey: "UPnKTCZcG4nJ5s_pU",
+            });
+        })();
+    </script>
+        <script src="app.js" defer></script>
 </head>
 <body>
     <section id="landing-page">
