--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </script>
         <script src="app.js" defer></script>
 </head>
+
 <body>
     <section id="landing-page">
         <nav>
@@ -39,14 +40,14 @@
                     link__hover-effect--black
                     ">Projects</a>
                 </li>
-                <li class="nav__link">
+                <li class="nav__link" onclick="toggleModal()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
                     ">Contact</a>
                 </li>
-                <li class="nav__link click">
+                <li class="nav__link click" onclick="toggleContrast()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
@@ -61,7 +62,7 @@
                 <h1 class="title blue">I'm Samuel.</h1>
                 <p class="header__para">I'm a <b class="blue">Frontend Software Engineer</b> who loves turning ideas into seamless, delightful web experiences.
                 <br>
-                Here's a bit more <b class="blue">about me.</b>
+                Here's a bit more <b class="blue click" onclick="toggleModal()">about me.</b>
                 </p>
                 <div class="social__list">
                     <a class="social__link click " href=""><i class="fa-brands fa-linkedin-in"></i></a>
@@ -70,7 +71,7 @@
                 </div>
             </div>
         </header>
-        <button class="mail__btn click">
+        <button class="mail__btn click" onclick="toggleModal()">
            <i class="fa-regular fa-envelope"></i>
         </button>
         <a href="#projects" class="scroll">
@@ -106,6 +107,7 @@
                 </div>
             </div>
             <div class="modal__half modal__contact">
+                <i class="fa-solid fa-xmark modal__exit click" onclick="toggleModal()"></i>
                 <h3 class="modal__title modal__title--contact">
                     Let's have a chat!
                 </h3>
@@ -136,7 +138,6 @@
                     Thanks for the message! Looking forward to connecting soon.
                 </div>
                 </div>
-                <i class="fa-solid fa-xmark modal__exit"></i>
         </div>
     </section>
     <section id="projects">
